continued work